--- a/static/css/IndividualProjects/andersonCodingClub.css
+++ b/static/css/IndividualProjects/andersonCodingClub.css
@@ -1,90 +1,95 @@
-/* Base Styles */
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: rgb(255, 255, 255);
-}
-
-a {
-    text-decoration: none;
-}
-
-/* Header Styles */
 .header {
     background: white;
-    position: relative;
+    position: fixed;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 75px;
     padding: 20px 100px;
     z-index: 2;
     display: flex;
     flex-direction: row;
+    background: transparent;
+    /*justify-content: space-between;*/
 }
 
-.header-scrolled {
-    background: transparent;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    padding: 20px 100px;
-    z-index: 2;
-    animation: none;
-    transform: scale(1.0035);
-}
 
 .nav-bar {
     display: flex;
     flex-direction: row;
-    margin-left: auto;
     padding-right: 100px;
+    margin-left: 60%;
+ 
 }
 
-.nav-link {
+.nav-text {
     text-decoration: none;
+    margin-right: 15px;
     color: black;
-    margin: 50px 15px 0 40px;
+    text-shadow: 
+    -0.5px -0.5px 0 #fff,  
+     0.5px -0.5px 0 #fff,
+    -0.5px  0.5px 0 #fff,
+     0.5px  0.5px 0 #fff;     margin-top: 50px;
+    margin-left: 40px;
 }
 
-.nav-link:hover {
+.nav-text:hover {
     color: rgb(72, 71, 71);
     cursor: pointer;
-    text-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 40px rgb(0, 0, 0, 0.4);
 }
 
-/* Logo Styles */
-.logo {
+.option-logo {
     width: 75px;
     height: 75px;
     display: flex;
 }
 
-/* Content Styles */
-.content-row {
+.selector-content {
+    opacity: 0;
+}
+
+.visible-selector-content {
+    animation: glow 2s forwards;
+
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: rgb(255,255,255);
+}
+
+
+.page-row-section {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
-
-.content-column {
+.page-column-section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: none;
 }
 
-.text-content {
+.page-text {
     color: black;
-    z-index: 1;
-    font-size: 18px;
+    z-index: 1; 
+    font-size: 22px;
     line-height: 1.7;
+    align-items: center;
+    justify-content: center;
     text-align: left;
     transition: all 0.5s ease;
+    font-size: 18px;
 }
 
-.card {
+.content {
     position: relative;
     padding: 20px;
     width: 600px;
@@ -100,8 +105,12 @@ a {
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
+a {
+    text-decoration: none;
+}
+
 .img-background {
-    width: 90%;
+    width: 100%;
 }
 
 .img-vertical {
@@ -109,18 +118,93 @@ a {
     width: 300px;
 }
 
-/* Animation Styles */
+#loading {
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.buffer-zone {
+    height: 60vh;
+    width: 90%;
+    background-color: white;
+    transition: 0.5s all;
+    
+}
+
+.buffer-zone-move {
+    height: 40vh;
+}
+
+.load-button:hover {
+    transform: scale(1.1, 1.4);
+}
+
+.load-button {
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-top: 50px;
+    width: 100%;
+    height: 30%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    transition: 0.5s all;
+    z-index: 101;
+}
+
+.hidden-content {
+    display: none
+}
+
+.hidden {
+    display: none;
+}
+
+.no-scroll {
+    overflow: hidden;
+    height: 100%;
+}
+
+.load-button:hover .buffer-img {
+    transform: translateY(-150px); 
+    transition: transform 0.5s ease; 
+}
+
+.buffer-img {
+    position: relative;
+    transition: transform 0.5s ease; 
+    width: 75px;
+    height: 75px;
+}
+
+.buffer-text {
+    font-size: 40px;
+    display: inline-block;
+    text-align: left;
+    margin-left: 110px;
+}
+
 @keyframes glow {
-    0% {
-        box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3);
-    }
-    30% {
-        box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3);
-    }
-    100% {
-        opacity: 1;
-        box-shadow: none;
-    }
+    0% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3); }
+    30% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3);}
+    100% { opacity: 1;
+        box-shadow: none;}
+    
+}
+
+#next-page-preview {
+    position: fixed; 
+    bottom: -100%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 100%; 
+    max-height: 70vh; 
+    overflow: none; 
+    z-index: 100; 
+    display: none; 
+    pointer-events: none;
+    transition: bottom 0.5s
 }
 
 @keyframes scrollUp {
@@ -136,160 +220,25 @@ a {
     0% {
         bottom: -80%;
     }
+    
     100% {
         bottom: -100%;
     }
 }
 
-.selector-hidden {
-    opacity: 0;
-}
 
-.selector-visible {
-    animation: glow 2s forwards;
-}
 
-/* Buffer Zone Styles */
-.buffer-zone {
-    height: 60vh;
-    width: 90%;
-    background-color: white;
-    transition: height 0.5s ease;
-}
-
-.buffer-zone-condensed {
-    height: 40vh;
-}
-
-.buffer-text {
-    font-size: 40px;
-    display: inline-block;
-    text-align: left;
-    margin-left: 110px;
-}
-
-.buffer-text-container {
-    position: relative;
-    display: inline-block;
-}
-
-.text-change {
-    position: relative;
-    z-index: 1;
-}
-
-.buffer-text-container::before {
-    content: "Next Project";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    font-size: 40px;
-    display: inline-block;
-    text-align: left;
-    margin-left: 110px;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.buffer-text-container::after {
-    content: "New Text";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    font-size: 40px;
-    display: inline-block;
-    text-align: left;
-    margin-left: 110px;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.button-load:hover ~ .buffer-text-container::before {
-    opacity: 0;
-}
-
-.button-load:hover ~ .buffer-text-container::after {
-    opacity: 1;
-}
-
-/* Button Styles */
-.button-load {
-    padding: 50px 300px;
-    width: 100%;
-    height: 30%;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    transition: all 0.5s ease;
-    z-index: 101;
-}
-
-.button-load:hover {
-    transform: scale(1.1, 1.4);
-}
-
-.button-load:hover .img-icon {
-    transform: translateY(-150px);
-    transition: transform 0.5s ease;
-}
-
-.img-icon {
-    position: relative;
-    transition: transform 0.5s ease;
-    width: 75px;
-    height: 100px;
-}
-
-/* Loading Styles */
-#loading {
-    text-align: center;
-    padding: 10px;
-    font-size: 18px;
-}
-
-/* Hidden and No Scroll Styles */
-.hidden-content {
-    display: none;
-}
-
-.hidden {
-    display: none;
-}
-
-.no-scroll {
-    overflow: hidden;
-    height: 100%;
-}
-
-/* Next Page Preview Styles */
-#next-page-preview {
-    position: fixed;
-    bottom: -100%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-height: 70vh;
-    overflow: none;
-    z-index: 100;
-    display: none;
-    pointer-events: none;
-    transition: bottom 0.5s;
-}
-
-/* Input Blocker Styles */
 #input-blocker {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
-    pointer-events: none;
+    z-index: 9999; 
+    pointer-events: none; 
 }
 
 #input-blocker.active {
     pointer-events: all;
 }
+
