--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -54,6 +54,7 @@
 }
 
 .selector-content {
+    width: 100%;
     opacity: 0;
     transition: all 1s;
     animation: slidingAnimationLeft 1s;
@@ -75,7 +76,7 @@
     margin-top: 20px;
     position: relative; 
     border: none;
-    background-color: rgb(246,246,246);
+    background-color: white;
     color: black;
     border-radius: 4px;
     box-shadow: inset 0 0 0 lightyellow;
@@ -107,14 +108,29 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
+    margin-top: 100px;
 }
 .page-column-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding-top: none;
+}
+
+.inner-row-section {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start; 
+    height: 100%; 
+}
+
+.inner-column-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; 
+    height: 100%; 
 }
 
 .page-text {
@@ -131,15 +147,15 @@ body {
 .content {
     position: relative;
     padding: 20px;
-    width: 600px;
+    width: 75vw;
     height: 400px;
-    border-radius: 10px;
+    border-radius: 4px;
     background: none;
     z-index: 0;
     display: flex;
     font-size: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
@@ -152,27 +168,27 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(246,246,246);
-    border-radius: 10px;
+    background: white;
+    border-radius: 4px;
     z-index: -1;
     transform-origin: center center;
     transition: all 0.5s ease;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.00);
 }
 
 .content.default-mode::before {
-    background: rgb(246,246,246);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    background: white;
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.00);
 }
 .content.default-mode:hover::before {
     animation: none;
     transform: scale(1.1, 1.1);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.00);
 }
 
 .content.default-mode:hover {
     background: none;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.00);
 
 }
 
@@ -181,6 +197,7 @@ body {
 }
 
 .content img {
+    margin-right: 200px;
     transition: all 0.5s ease;
 }
 
@@ -189,12 +206,12 @@ body {
 }
 
 .content.alt-mode::before {
-   background: rgb(246,246,246);
-   box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+   background: white;
+   box-shadow: 0 3px 10px rgb(0, 0, 0, 0.00);
 }
 
 .content.alt-mode:hover::before {
-    background: rgb(246,246,246); 
+    background: white; 
     animation: animationOne 0.5s forwards ease-out,
                animationTwo 0.5s 0.5s forwards ease-in,
                animationThree 0.5s 1s forwards ease-out,
@@ -213,8 +230,15 @@ a {
 }
 
 img {
-    height: 200px;
-    width: 300px;
+    height: 370px;
+    width: 555px;
+}
+
+.gradient-hr {
+    border: 0;
+    height: 1.5px;
+    background: linear-gradient(to right, lightblue, lightgreen, pink);
+    width: 75%;
 }
 
 @keyframes animationOne {
